cluster/apps/porn-vault/elasticsearch.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: porn-vault
spec:
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.17.2
          ports:
            - name: elastic-9200
              containerPort: 9200
            - name: elastic-9300
              containerPort: 9300
          resources:
            limits:
              memory: "4Gi"
              cpu: "4.0"
