cluster/apps/porn-vault/porn-vault.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: porn-vault
  namespace: porn-vault
spec:
  selector:
    matchLabels:
      app: porn-vault
  template:
    metadata:
      labels:
        app: porn-vault
    spec:
      containers:
        - name: porn-vault
          image: boi12321/porn-vault:edge
          ports:
            - name: web
              containerPort: 3000
          volumeMounts:
            - name: videos
              mountPath: /videos
            - name: images
              mountPath: /images
            - name: config
              mountPath: /config
          resources:
            limits:
              memory: "4Gi"
              cpu: "4.0"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: porn-vault
        - name: videos
          nfs:
            path: /volume1/Media/porn/videos
            server: granite.${DOMAIN}
        - name: images
          nfs:
            path: /volume1/Media/porn/images
            server: granite.${DOMAIN}
