cluster/apps/porn-vault/elasticsearch.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: porn-vault
spec:
  selector:
    app: elasticsearch
  ports:
  - port: 9200
    targetPort: 9200
  - port: 9300
    targetPort: 9300
