cluster/apps/porn-vault/porn-vault.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: porn-vault
  namespace: porn-vault
spec:
  selector:
    app: porn-vault
  ports:
  - name: porn-vault
    port: 3000
    targetPort: 3000
