cluster/apps/porn-vault/porn-vault.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: porn-vault
  namespace: porn-vault
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
spec:
  ingressClassName: nginx
  rules:
  - host: pornvault.${DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: porn-vault
            port: 
              number: 300
  tls:
    - hosts:
      - pornvault.${DOMAIN}
      secretName: porn-vault-cert
